--- a/examples/test/video/index.html
+++ b/examples/test/video/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <!-- Origin Trial Token, feature = WebVR (For Chrome M59+), origin = https://aframe.io, expires = 2017-07-28 -->
@@ -12,11 +12,11 @@
     <a-scene stats>
       <a-assets>
         <video id="videoParis" preload="auto"
-               src="https://ucarecdn.com/4130c599-445f-4e76-9052-49978e972641/"
+               src="https://cdn.glitch.com/3c75540c-eaff-4599-9386-91482d2a7f43/city_halfres_hls.m3u8"
                width="160" height="90" autoplay loop="true"
                crossOrigin="anonymous"></video>
         <video id="videoHypercube" preload="auto"
-               src="https://ucarecdn.com/210dd043-dcd3-446d-9b36-ad19471f6273/"
+               src="https://cdn.glitch.com/3c75540c-eaff-4599-9386-91482d2a7f43/city_halfres_hls.m3u8"
                width="160" height="90" autoplay loop="true"
                crossOrigin="anonymous"></video>
       </a-assets>
