--- a/examples/test/video/360.html
+++ b/examples/test/video/360.html
@@ -26,7 +26,7 @@
         <!-- Single source video. -->
         <video id="video" style="display:none" autoplay="" loop="" crossorigin="anonymous" playsinline="" webkit-playsinline="">
           <!-- MP4 video source. -->
-          <source type="video/mp4" src="https://ucarecdn.com/fadab25d-0b3a-45f7-8ef5-85318e92a261/">
+          <source type="video/mp4" src="https://cdn.glitch.com/3c75540c-eaff-4599-9386-91482d2a7f43/city_halfres_hls.m3u8">
         </video>
       </a-assets>
     </a-scene>
